--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 Delmania's Daily Musings
 name: Robert Whitcomb
 Daily thoughts, learnings, and meditations.
-Description: Developer, manager, father, human being
+description: Developer, manager, father, human being
 theme: jekyll-theme-tactile
