--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-Delmania's Daily Musings
+title: Delmania's Daily Musings
 name: Robert Whitcomb
-Daily thoughts, learnings, and meditations.
 description: Developer, manager, father, human being
 theme: jekyll-theme-tactile
