--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Delmania's Daily Musings
-name: Robert Whitcomb
+name: Delmania's Daily Musings
 description: Developer, manager, father, human being
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 theme: jekyll-theme-tactile
